--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,12 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "redis": "^5.8.3",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.1.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@nestjs/cli": "^11.0.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
