--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "most-common-words-by-language": "^3.0.14",
     "pg": "^8.16.3",
     "redis": "^5.8.3",
     "reflect-metadata": "^0.2.2",
