--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "^11.1.7",
     "@nestjs/websockets": "^11.1.7",
     "bcrypt": "^6.0.0",
+    "cities.json": "^1.1.50",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
@@ -39,7 +40,8 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.1.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
