--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "uuid": "^13.0.0",
+    "validator": "^13.15.23",
     "wordlist-english": "^1.2.1",
     "zod": "^4.1.12"
   },
