--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/websockets": "^11.1.8",
     "@sendgrid/mail": "^8.1.6",
+    "@types/multer": "^2.0.0",
+    "@types/uuid": "^11.0.0",
     "bcrypt": "^6.0.0",
     "cities.json": "^1.1.50",
     "class-transformer": "^0.5.1",
@@ -36,11 +38,14 @@
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
     "most-common-words-by-language": "^3.0.14",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "redis": "^5.8.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
