--- a/compose.yaml
+++ b/compose.yaml
@@ -46,6 +46,7 @@ services:
     volumes:
       - ./backend:/app
       - backend_node_modules:/app/node_modules
+      - uploads_data:/app/uploads
     depends_on:
       db:
         condition: service_healthy
@@ -95,3 +96,4 @@ volumes:
   redis_data:
   backend_node_modules:
   frontend_node_modules:
+  uploads_data:
